# backend/core-api/swagger_server/models/instance.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Instance(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, id: str=None, preview: str=None):  # noqa: E501
+        """Instance - a model defined in Swagger
+
+        :param id: The id of this Instance.  # noqa: E501
+        :type id: str
+        :param preview: The preview of this Instance.  # noqa: E501
+        :type preview: str
+        """
+        self.swagger_types = {
+            'id': str,
+            'preview': str
+        }
+
+        self.attribute_map = {
+            'id': 'id',
+            'preview': 'preview'
+        }
+
+        self._id = id
+        self._preview = preview
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Instance':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Instance of this Instance.  # noqa: E501
+        :rtype: Instance
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def id(self) -> str:
+        """Gets the id of this Instance.
+
+
+        :return: The id of this Instance.
+        :rtype: str
+        """
+        return self._id
+
+    @id.setter
+    def id(self, id: str):
+        """Sets the id of this Instance.
+
+
+        :param id: The id of this Instance.
+        :type id: str
+        """
+
+        self._id = id
+
+    @property
+    def preview(self) -> str:
+        """Gets the preview of this Instance.
+
+
+        :return: The preview of this Instance.
+        :rtype: str
+        """
+        return self._preview
+
+    @preview.setter
+    def preview(self, preview: str):
+        """Sets the preview of this Instance.
+
+
+        :param preview: The preview of this Instance.
+        :type preview: str
+        """
+
+        self._preview = preview
